# words

./: README.md
s2/: add.hs  compass.hs  expression.hs  greet.hs  headtail.hs
s3-4/words/: 4.1.test.hs  words.cabal
s3-4/words/src/: Data.hs
s3-4/words/test/: Spec.hs
s4/words/: LICENSE  words.cabal
s4/words/app/: Main.hs
s4/words/src/: Data.hs  Lib.hs
s4/words/test/: Spec.hs
