name:                words
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/osfameron/words#readme
license:             BSD3
license-file:        LICENSE
author:              Hakim
maintainer:          hakim@greenokapi.net
copyright:           BSD
category:            Example
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Data
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , random
  default-language:    Haskell2010

executable words
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -dynamic
  build-depends:       base
                     , words
                     , random
  default-language:    Haskell2010

test-suite words-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , words
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/osfameron/words
